feat: add some features

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
  </div>
     </div> 
     <div class="reset">RESET</div>
+    <div class="popup">
+        <div class="message">You win!!!</div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
